Added the footer. Links have hover effect

--- a/index.html
+++ b/index.html
@@ -248,7 +248,32 @@
           <h2 class="heading-secondary">We make people genuinely happy</h2>
         </div>
         <div class="row">
-          <div class="story">TEXT</div>
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="person on a tour"
+                class="story__img"
+              />
+              <figcation class="story__caption">
+                Mary Smith
+              </figcation>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+                repellat eligendi enim voluptates. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Odit repellat eligendi enim
+                voluptates. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Odit repellat eligendi enim voluptates. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Odit repellat eligendi
+                enim voluptates.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
