--- a/index.html
+++ b/index.html
@@ -16,26 +16,32 @@
   </head>
   <body>
     <div class="navigation">
-      <input type="checkbox" class="navigation__checkbox idnavi-toggle" />
-      <label for="navi-toggle" class="navigation__button">Menu</label>
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
+
+      <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
+
       <div class="navigation__background">&nbsp;</div>
 
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="#" class="navigation__link">About Us</a>
+            <a href="#" class="navigation__link">About Natous</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link">Your Benefits</a>
+            <a href="#" class="navigation__link">Your benfits</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link">Popular Tours</a>
+            <a href="#" class="navigation__link"
+              ><span>03</span>Popular tours</a
+            >
           </li>
           <li class="navigation__item">
             <a href="#" class="navigation__link">Stories</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link">Book Now</a>
+            <a href="#" class="navigation__link">Book now</a>
           </li>
         </ul>
       </nav>
