--- a/index.html
+++ b/index.html
@@ -456,6 +456,34 @@
       </div>
     </footer>
 
+    <!--popup box when .card is clicked-->
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <h2 class="heading-secondary .u-margin-bottom-small">
+            Start Booking Now
+          </h2>
+          <h3 class="heading-tertiary .u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque
+            odio aspernatur pariatur ducimus saepe? Natus voluptate, expedita
+            est ut culpa enim eos ratione, at assumenda, quod consequatur
+            velitet suscipit! Lorem ipsum dolor, sit amet consectetur
+            adipisicing elit. Itaque odio aspernatur pariatur ducimus saepe?
+            Natus voluptate, expedita est ut culpa enim eos ratione, at
+            assumenda, quod consequatur velitet suscipit!
+          </p>
+          <a href="#" class="btn btn--green"> Book now </a>
+        </div>
+      </div>
+    </div>
+
     <!--
     <section class="grit-test">
       <div class="row">
