--- a/index.html
+++ b/index.html
@@ -48,11 +48,7 @@
     </div>
     <header class="header">
       <div class="header__logo-box">
-        <img
-          src="img/cropped-Thrive-logo-nostrap-colour.png"
-          alt="THRIVE Logo"
-          class="header__logo"
-        />
+        <img src="img/logo-white.png" alt="Natours logo" class="header__logo" />
       </div>
       <div class="header__text-box">
         <h1 class="heading-primary">
